2007-06-14  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/pingger/pingger.rb (Pingger::async_send): Change: Check response of ping servers. When response is false, ping time is not recorded.

	* donrails/app/models/don_ping.rb (DonPing::send_ping2a): Change: Check response of ping servers.

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::don_get_theme): Small fix.

2007-06-09  Akira TAGOH  <at@gclab.org>

	* donrails/tool/pingger/pingger.rb: Load environment.rb instead of
	loading active_recoard directly to make it comfortable for RoR
	installation from gem.

2007-06-06  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article.rb (Article::sendping): Fix for sending ping of hidden article.

2007-06-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/don_attachment.rb (DonAttachment::filesave): Typo fixed. It had caused failure for image upload by XMLRPC.

2007-06-01  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/admin/shared/add_banlist.rhtml: Change to hide help message (default). It can toggle hide/show.

	* donrails/app/controllers/admin/system_controller.rb (Admin::manage_don_env): Change to show current configuration when no ID is inputted.

	* donrails/app/views/admin/system/manage_don_ping.rhtml: Add to show ping queuing time and sending time.

2007-05-29  Akira TAGOH  <at@gclab.org>

	* upgrade_1_7.postgresql.sql: New.

	* donrails/tool/tables-postgresql.sql: Updated.

2007-05-29  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/pingger/pingger.rb: New option. -n, -u, --force

	* donrails/app/controllers/notes_controller.rb (NotesController::catch_ping): Fix for wrong content-type return.
	(NotesController::catch_trackback): likewise.

2007-05-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/pingger/pingger.rb: New file. It is Proxy ping module.

	* upgrade_1_7.mysql.sql: New file.

	* donrails/app/controllers/admin/system_controller.rb (Admin::add_don_env): Add ping_async entry.